Add files to ignore

--- a/.gitignore
+++ b/.gitignore
@@ -17,6 +17,10 @@ dist-ssr
 .env.local
 .env.production
 
+# Documentation (exclude from git except README)
+*.md
+!README.md
+
 # Editor directories and files
 .vscode/*
 !.vscode/extensions.json
